--- a/style.css
+++ b/style.css
@@ -15,7 +15,9 @@ html, body {
   width: 100%;
   height: 100%;
   background: url('images/mechanism1.png') no-repeat center center/cover;
-  
-  mask-image: radial-gradient(circle 200px at var(--cursorX, 50%) var(--cursorY, 50%), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  -webkit-mask-image: radial-gradient(circle 200px at var(--cursorX, 80%) var(--cursorY, 80%), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+
+  #Desktop
+  mask-image: radial-gradient(circle 200px at var(--cursorX, 70%) var(--cursorY, 70%), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  # mobile
+  -webkit-mask-image: radial-gradient(circle 200px at var(--cursorX, 50%) var(--cursorY, 50%), rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
